[package]
name = "path_abs"
version = "0.2.1"
authors = ["Garrett Berg <googberg@gmail.com>"]
description = "Absolute serializable path types and associated methods."
keywords = [
    "filesystem",
    "path",
    "cli",
    "serde",
    "serialize",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/path_abs"
repository = "https://github.com/vitiral/path_abs"

[dependencies]
serde = {version=">=1.0", optional=true}
serde_derive = {version="1.0.27", optional=true}
stfu8 = {version=">=0.2.1", optional=true}

[features]
default = ["serialize"]
serialize = ["serde", "serde_derive", "stfu8"]

[dev-dependencies]
pretty_assertions = "0.4.1"
serde_json = "1.0.9"
tempdir = "0.3.5"
