[package]
authors = ["Garrett Berg <googberg@gmail.com>"]
description = "Absolute serializable path types and associated methods."
documentation = "https://docs.rs/path_abs"
keywords = [
    "filesystem",
    "path",
    "cli",
    "serde",
    "serialize",
]
license = "MIT OR Apache-2.0"
name = "path_abs"
readme = "README.md"
repository = "https://github.com/vitiral/path_abs"
version = "0.2.2"

[dependencies.serde]
optional = true
version = ">=1.0"

[dependencies.serde_derive]
optional = true
version = "1.0.27"

[dependencies.stfu8]
optional = true
version = ">=0.2.1"

[dev-dependencies]
pretty_assertions = "0.4.1"
serde_json = "1.0.9"
tempdir = "0.3.5"

[features]
default = ["serialize"]
serialize = [
    "serde",
    "serde_derive",
    "stfu8",
]
