[package]
authors = ["Rett Berg <googberg@gmail.com>"]
description = "Ergonomic paths and files in rust."
documentation = "https://docs.rs/path_abs"
keywords = [
    "filesystem",
    "path",
    "file",
    "types",
    "serde",
]
license = "MIT OR Apache-2.0"
name = "path_abs"
readme = "README.md"
repository = "https://github.com/vitiral/path_abs"
version = "0.5.0"
edition = "2018"

[dependencies]
std_prelude = "0.2.12"

[dependencies.serde]
optional = true
version = "^1.0"

[dependencies.serde_derive]
optional = true
version = "^1.0"

[dependencies.stfu8]
optional = true
version = "^0.2.1"

[dev-dependencies]
pretty_assertions = "^0.4"
regex = "^0.2"
serde_json = "^1.0"
tempdir = "^0.3"

[features]
default = ["serialize"]
serialize = [
    "serde",
    "serde_derive",
    "stfu8",
]
